@@ -12,19 +12,20 @@ package org.polarsys.capella.common.queries.interpretor;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import org.apache.log4j.Logger;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.IExtensionRegistry;
 import org.eclipse.core.runtime.Platform;
-
-import org.polarsys.capella.common.tools.report.EmbeddedMessage;
-import org.polarsys.capella.common.tools.report.config.registry.ReportManagerRegistry;
-import org.polarsys.capella.common.tools.report.util.IReportManagerDefaultComponents;
+import org.polarsys.capella.common.mdsofa.common.constant.ICommonConstants;
+import org.polarsys.capella.common.queries.AbstractQuery;
 import org.polarsys.capella.common.queries.IQuery;
 import org.polarsys.capella.common.queries.debug.FormatedLogger;
 import org.polarsys.capella.common.queries.debug.Log;
@@ -34,6 +35,10 @@ import org.polarsys.capella.common.queries.filters.IQueryFilter;
 import org.polarsys.capella.common.queries.internal.IPrivateQueryContext;
 import org.polarsys.capella.common.queries.internal.NoneValue;
 import org.polarsys.capella.common.queries.queryContext.IQueryContext;
+import org.polarsys.capella.common.queries.queryContext.QueryContextConstants;
+import org.polarsys.capella.common.tools.report.EmbeddedMessage;
+import org.polarsys.capella.common.tools.report.config.registry.ReportManagerRegistry;
+import org.polarsys.capella.common.tools.report.util.IReportManagerDefaultComponents;
 
 public class QueryInterpretor {
 
@@ -43,6 +48,7 @@ public class QueryInterpretor {
 	private static int queryIdCounter = 0;
 	private static Hashtable<IQuery, Integer> queryToId = new Hashtable<IQuery, Integer>();
 	private static Hashtable<String, IConfigurationElement> identifier2QueryDef = null;
+  private static Hashtable<String, Set<IQueryFilter>> identifier2QueryFilters = null;
 	private static Hashtable<String, IQuery> identifier2Query = null;
 	private static Hashtable<String, String> queryIdentifier2ExtendedQueryIdentifier = null;
 
@@ -55,7 +61,7 @@ public class QueryInterpretor {
 	 * @throws NonExistingQuery
 	 */
 	@SuppressWarnings("unchecked")
-	public static <T> List<T> executeQuery(String queryIdentifier, Object semanticsObject, IQueryContext context, IQueryFilter filter) {
+	public static <T> List<T> executeQuery(String queryIdentifier, Object semanticsObject, IQueryContext context, Set<IQueryFilter> filters) {
 		if (context == null) {
 			throw new IllegalArgumentException("the context shall not be null"); //$NON-NLS-1$
 		}
@@ -75,7 +81,7 @@ public class QueryInterpretor {
 
 		Collection<Object> subResult = new LinkedHashSet<Object>();
 
-		List<IQuery> queries = getQuerySetForQueryIdentifier(queryIdentifier);
+		Set<IQuery> queries = getQuerySetForQueryIdentifier(queryIdentifier);
 		for (IQuery query : queries) {
 			Integer queryId = queryToId.get(query);
 			List<Object> res = theContext.getResultFromCache(queryId, semanticsObj);
@@ -104,7 +110,9 @@ public class QueryInterpretor {
 		List<Object> result = new ArrayList<Object>(subResult);
 
 		if (theContext.getExecutionLevel() == 0) {
-			if (filter != null) {
+		  // Add (or overwrite) query input element in the context to be used by filters
+		  theContext.overwriteValue(QueryContextConstants.QUERY_INPUT_ELEMENT_PARAMETER, semanticsObject);
+		  for (IQueryFilter filter : filters) {
 				result = executeFilter(result, filter, context);
 			}
 			FormatedLogger.addTextLn("Filtering ...", Log.QUERY_INTERPRETOR); //$NON-NLS-1$
@@ -112,16 +120,38 @@ public class QueryInterpretor {
 		return (List<T>) result;
 	}
 
+  public static <T> List<T> executeQuery(String queryIdentifier, Object semanticsObject, IQueryContext context, IQueryFilter filter) {
+    Set<IQueryFilter> filters = getFilters(queryIdentifier);
+    if (filter != null) filters.add(filter);
+    return executeQuery(queryIdentifier, semanticsObject, context, filters);
+  }
+
 	public static <T> List<T> executeQuery(String queryIdentifier, Object semanticsObject, IQueryContext context) {
-		return executeQuery(queryIdentifier, semanticsObject, context, null);
+		return executeQuery(queryIdentifier, semanticsObject, context, getFilters(queryIdentifier));
 	}
 
 	public static <T> List<T> executeQuery(String queryIdentifier, IQueryContext context) {
-		return executeQuery(queryIdentifier, NONE_VALUE, context, null);
+		return executeQuery(queryIdentifier, NONE_VALUE, context, getFilters(queryIdentifier));
 	}
 
 	public static <T> List<T> executeQuery(String queryIdentifier, IQueryContext context, IQueryFilter filter) {
-		return executeQuery(queryIdentifier, NONE_VALUE, context, filter);
+	  Set<IQueryFilter> filters = getFilters(queryIdentifier);
+	  if (filter != null) filters.add(filter);
+		return executeQuery(queryIdentifier, NONE_VALUE, context, filters);
+	}
+
+	public static Set<IQueryFilter> getFilters(String queryIdentifier) {
+	  if (identifier2QueryFilters == null) {
+	    loadQueries();
+	  }
+	  Set<IQueryFilter> result = new HashSet<IQueryFilter>();
+	  for (IQuery query : getQuerySetForQueryIdentifier(queryIdentifier)) {
+	    Set<IQueryFilter> filters = identifier2QueryFilters.get(query.getIdentifier());
+	    if (filters != null) {
+	      result.addAll(filters);
+	    }
+	  }
+    return result;
 	}
 
 	public static <T> List<T> executeFilter(List<T> elements, IQueryFilter filter, IQueryContext context) {
@@ -138,8 +168,8 @@ public class QueryInterpretor {
 		return executeFilter(elements, filter, null);
 	}
 
-	private static List<IQuery> getQuerySetForQueryIdentifier(String queryIdentifier) {
-		List<IQuery> res = new ArrayList<IQuery>();
+	private static Set<IQuery> getQuerySetForQueryIdentifier(String queryIdentifier) {
+		Set<IQuery> res = new HashSet<IQuery>();
 		if (identifier2QueryDef == null) {
 			loadQueries();
 		}
@@ -147,11 +177,20 @@ public class QueryInterpretor {
 			throw new NonExistingQuery(queryIdentifier);
 		}
 		String currentQueryIdentifier = queryIdentifier;
-		while (currentQueryIdentifier != null) {
-			IQuery query = getQuery(currentQueryIdentifier);
-			res.add(0, query);
-			currentQueryIdentifier = query.getExtendedQueryIdentifier();
-		}
+    while (currentQueryIdentifier != null) {
+      IQuery query = getQuery(currentQueryIdentifier);
+      if (query != null && !res.contains(query)) {
+        res.add(query);
+        // FIXME the path here doesn't take into account multiple levels of extenders, shall be fixed
+        for (String extendingQueryId : query.getExtendingQueryIdentifiers()) {
+          IQuery extendingQuery = getQuery(extendingQueryId);
+          if (extendingQuery != null && !res.contains(extendingQuery)) {
+            res.add(extendingQuery);
+          }
+        }
+        currentQueryIdentifier = query.getExtendedQueryIdentifier();
+      }
+    }
 		return res;
 	}
 
@@ -160,11 +199,13 @@ public class QueryInterpretor {
 		if (query == null) {
 			try {
 				IConfigurationElement queryDef = identifier2QueryDef.get(queryIdentifier);
-				query = (IQuery) queryDef.createExecutableExtension("algorithm"); //$NON-NLS-1$
-				query.setIdentifier(queryIdentifier);
-				query.setExtendedQueryIdentifier(queryIdentifier2ExtendedQueryIdentifier.get(queryIdentifier));
-				identifier2Query.put(queryIdentifier, query);
-				queryToId.put(query, new Integer(queryIdCounter++));
+				if (queryDef != null) {
+  				query = (IQuery) queryDef.createExecutableExtension("algorithm"); //$NON-NLS-1$
+  				query.setIdentifier(queryIdentifier);
+  				query.setExtendedQueryIdentifier(queryIdentifier2ExtendedQueryIdentifier.get(queryIdentifier));
+  				identifier2Query.put(queryIdentifier, query);
+  				queryToId.put(query, Integer.valueOf(queryIdCounter++));
+				}
 			} catch (CoreException exception) {
 				exception.printStackTrace();
 			}
@@ -174,27 +215,51 @@ public class QueryInterpretor {
 
 	private static void loadQueries() {
 		// initialize tables
-		identifier2QueryDef = new Hashtable<String, IConfigurationElement>();
+    identifier2QueryDef = new Hashtable<String, IConfigurationElement>();
+    identifier2QueryFilters = new Hashtable<String, Set<IQueryFilter>>();
 		identifier2Query = new Hashtable<String, IQuery>();
 		queryIdentifier2ExtendedQueryIdentifier = new Hashtable<String, String>();
 		// load all the extensions
 		IExtensionRegistry registry = Platform.getExtensionRegistry();
 		IConfigurationElement[] querySpecifications = registry.getConfigurationElementsFor("org.polarsys.capella.common.queries.query"); //$NON-NLS-1$
 		for (IConfigurationElement querySpecification : querySpecifications) {
-			String queryIdentifier = querySpecification.getAttribute("queryIdentifier"); //$NON-NLS-1$
-			String extendedQueryIdentifier = querySpecification.getAttribute("extendedQueryIdentifier"); //$NON-NLS-1$
-			IConfigurationElement[] queryConfs = querySpecification.getChildren("queryAlgorithm"); //$NON-NLS-1$
-			IConfigurationElement queryDef = identifier2QueryDef.get(queryIdentifier);
-			if (queryDef != null) {
-				logger.error(new EmbeddedMessage(
-						"Query Engine : At least two query has been defined with identifier " + queryIdentifier + ". Identifier shall be unique !", //$NON-NLS-1$ //$NON-NLS-2$
-						IReportManagerDefaultComponents.MODEL));
-			} else {
-				identifier2QueryDef.put(queryIdentifier, queryConfs[0]);
-				if (extendedQueryIdentifier != null) {
-					queryIdentifier2ExtendedQueryIdentifier.put(queryIdentifier, extendedQueryIdentifier);
-				}
-			}
+		  if ("querySpecification".equals(querySpecification.getName())) {
+  			String queryIdentifier = querySpecification.getAttribute("queryIdentifier"); //$NON-NLS-1$
+  			String extendedQueryIdentifier = querySpecification.getAttribute("extendedQueryIdentifier"); //$NON-NLS-1$
+  			IConfigurationElement[] queryConfs = querySpecification.getChildren("queryAlgorithm"); //$NON-NLS-1$
+  			IConfigurationElement queryDef = identifier2QueryDef.get(queryIdentifier);
+  			if (queryDef != null) {
+  				logger.error(new EmbeddedMessage(
+  						"Query Engine : At least two query has been defined with identifier " + queryIdentifier + ". Identifier shall be unique !", //$NON-NLS-1$ //$NON-NLS-2$
+  						IReportManagerDefaultComponents.MODEL));
+  			} else {
+  				identifier2QueryDef.put(queryIdentifier, queryConfs[0]);
+  				if (extendedQueryIdentifier != null) {
+  					queryIdentifier2ExtendedQueryIdentifier.put(queryIdentifier, extendedQueryIdentifier);
+  				}
+  			}
+		  } else if ("queryFilter".equals(querySpecification.getName())) {
+        String queryIdentifier = querySpecification.getAttribute("queryIdentifier"); //$NON-NLS-1$
+        try {
+          IQueryFilter filter = (IQueryFilter) querySpecification.createExecutableExtension("filter"); //$NON-NLS-1$
+          Set<IQueryFilter> filters = identifier2QueryFilters.get(queryIdentifier);
+          if (filters == null) {
+            filters = new HashSet<IQueryFilter>();
+            identifier2QueryFilters.put(queryIdentifier, filters);
+          }
+          filters.add(filter);
+        } catch (CoreException ex) {
+          ex.printStackTrace();
+        }
+		  }
+		}
+    // resolve cross-references
+		for (Map.Entry<String, String> entry : queryIdentifier2ExtendedQueryIdentifier.entrySet()) {
+		  String extendedQueryId = entry.getValue();
+      IQuery extendedQuery = (extendedQueryId != null && !ICommonConstants.EMPTY_STRING.equals(extendedQueryId)) ? getQuery(extendedQueryId) : null;
+		  if (extendedQuery instanceof AbstractQuery) {
+		    ((AbstractQuery) extendedQuery).addExtendingQueryIdentifier(entry.getKey());
+		  }
 		}
 	}
 
